Track and show created sell orders and allow buying
