# mine-diamonds/api/src/tsoa/swagger.json
@@ -167,6 +167,57 @@
 				],
 				"type": "object",
 				"additionalProperties": false
+			},
+			"IGetDexOrdersResult": {
+				"description": "'GetDexOrders' return type",
+				"properties": {
+					"amount": {
+						"type": "number",
+						"format": "double"
+					},
+					"assettokenid": {
+						"type": "number",
+						"format": "double"
+					},
+					"orderid": {
+						"type": "number",
+						"format": "double"
+					},
+					"price": {
+						"type": "number",
+						"format": "double"
+					},
+					"seller": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"amount",
+					"assettokenid",
+					"orderid",
+					"price",
+					"seller"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"DexOrder": {
+				"$ref": "#/components/schemas/IGetDexOrdersResult"
+			},
+			"GetDexOrdersResponse": {
+				"properties": {
+					"stats": {
+						"items": {
+							"$ref": "#/components/schemas/DexOrder"
+						},
+						"type": "array"
+					}
+				},
+				"required": [
+					"stats"
+				],
+				"type": "object",
+				"additionalProperties": false
 			}
 		},
 		"securitySchemes": {}
@@ -309,6 +360,25 @@
 						}
 					}
 				]
+			}
+		},
+		"/dex_orders": {
+			"get": {
+				"operationId": "Get",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/GetDexOrdersResponse"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": []
 			}
 		}
 	},
