# mine-diamonds/middleware/src/types.ts
@@ -1,7 +1,14 @@
 import type { RoundExecutor, MatchExecutor } from '@paima/sdk/executors';
 import type { Hash } from '@paima/sdk/utils';
 
-import type { BaseRoundStatus, UserStats, UserTokenStats } from '@game/utils';
+import type {
+  BaseRoundStatus,
+  DexOrder,
+  UserAssetStats,
+  UserStats,
+  UserTokenStats,
+  UserValidMintedAssets,
+} from '@game/utils';
 
 export type { RoundExecutor, MatchExecutor };
 
@@ -27,4 +34,19 @@ export interface PackedUserStats {
 export interface PackedUserTokenStats {
   success: true;
   stats: UserTokenStats;
+}
+
+export interface PackedUserAssetStats {
+  success: true;
+  stats: UserAssetStats;
+}
+
+export interface PackedUserValidMintedAssetsStats {
+  success: true;
+  stats: UserValidMintedAssets;
+}
+
+export interface PackedDexOrdersStats {
+  success: true;
+  stats: DexOrder;
 }
